# MixSense

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  README_flavor_predictor.md  crude_NMR_papers.md  download_nmrbank.py  environment.yml  example_smiles.txt  example_usage.py  flavor_predictor.py  launch_llm_app.py  main.py  pyproject.toml  requirements.txt  requirements_flavor.txt  template.tex
.agents/rules/: coding-standards.md  mcp-environments.md  overview.md  skill-standards.md
.agents/workflows/: image-to-nmr-analysis.md  nmr-reaction-kinetics.md  reaction-to-nmr-quantification.md
LLM_code_for_tool/: llama_tool.py  test_deepseek.py  test_llama.py
NMRBank/: README.md
app/: README.md  agent.py  agent_pocketflow.py  chemistry_agent.py  cli.py  gradio_llm_app.py  llm_agent.py  mcp_server.py  simple_agent.py  test_llm_integration.py  tool_deconvolve_nmr.py  tool_definitions.py  tool_gradio_app.py  tools_asics.py  tools_deconvolve.py  tools_magnetstein.py  tools_nmr2structure.py  tools_nmrbank.py  tools_nmrdb.py  tools_reactiont5.py  utils.py
app/eval/: __init__.py  baselines.py  benchmark_deconvolution.py  benchmark_pipeline.py  benchmark_reactions.py  benchmark_with_baselines.py  eval_examples.py  generate_results.py  generate_test_data.py  predict_nmr.py  publication_figures.py  realistic_evaluation.py  run_all_benchmarks.py  spectrum_perturbation.py  test_nmrbank.py
app/examples/: benzene_derivatives_demo.csv  generate_demo_csv.py
conda-envs/mixsense/: core_env.yaml
data/: Bomeol _minor_.csv  atlanta.csv
envs/: environment.yml  working_gradio_env.yml  working_llm_agent_env.yml  working_llm_agent_env_new.yml  working_llm_agent_env_new_no_libintl.yml  working_llm_agent_env_new_no_libintl_flavor.yml
notebooks/: kinetic_plot.ipynb  radar_chart.ipynb  visualize_spectra.ipynb
r/: asics_quantify.R
reactants_to_products/: reactants_to_products.py
scripts/: deconvolve_nmr.py  test_asics.py
src/mixsense/: agent.py  gradio_llm_app.py  (+5 more)
tests/: test_h1_parser.py
(+58 files in other folders)
