[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "mixsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.9.0",
    "gurobipy==12.0.3",
    "highspy>=1.13.1",
    "isospecpy==2.2.3",
    "masserstein==1.0.0",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.6",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

